--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,5 +1,4 @@
-user_uuid = "0e04171d-7261-48a1-b235-493da9962bcc"
-bucket_name = "x5v2enzqfeclfged84wk8ovk8f53yyxo"
+terratowns_endpoint = "https://terratowns.cloud/api"
 index_html_filepath = "/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath = "/workspace/terraform-beginner-bootcamp-2023/public/error.html"
 assets_path = "/workspace/terraform-beginner-bootcamp-2023/public/assets"
