--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -7,3 +7,7 @@ assassins_creed = {
     public_path = "/workspace/terraform-beginner-bootcamp-2023/public/assassins-creed"
     content_version = 1
 }
+venezuela = {
+    public_path = "/workspace/terraform-beginner-bootcamp-2023/public/venezuela"
+    content_version = 1
+}
